# CritBot

./: .gitignore  Cargo.toml  README.md  appconfig.example.json  appconfig.json.example  bot.py  build.rs  critbot.service  helper.py  launcher.py  lavalink.service  main.py  pyproject.toml  raddit.py  requirements.txt  setup.sh  teste.json  teste.py  update_bot.sh
Utils/: Converters.py  CritHelpCommand.py  GeniusLyrics.py  Paginator.py  SponsorBlock.py  SpotifyTrackInfo.py  __init__.py
cogs/: appcommands.py  arvore.py  config.py  dev.py  events.py  fun.py  interactions.py  interactions.pyy  misc.py  modals.py  modals.pyy  music.py  old_music.pyy
config/: __init__.py  application.example.yml  applicationn.yml  appsettings.example.yaml  example_appsettings.yaml
config/translations/: en.config.json  en.misc.json  pt.config.json  pt.misc.json
config/translations/en/: appcommands.json  dev.json  events.json  fun.json  interactions.json  misc.json
config/translations/pt/: dev.json  interactions.json  misc.json
i18n/: __init__.py  tranlations.py  translations.py  translator.py
i18n/translations/en/: config.json  dev.json  events.json  fun.json  interactions.json  misc.json  music.json
i18n/translations/pt/: config.json  dev.json  events.json  fun.json  interactions.json  misc.json  music.json
i18n_macro/: Cargo.toml
i18n_macro/src/: lib.rs
i18n_macros/: Cargo.toml
i18n_macros/src/: lib.rs
migrations/: V1__initial_migration.sql
sql/: schema.sql
src/: bot_data.rs  config.rs  context.rs  db.rs  main.rs
src/commands/: config.rs  misc.rs  mod.rs
src/i18n/: README.md  mod.rs  translations.rs
