[project]
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp>=3.11.13",
    "asyncpg==0.30.0",
    "colorlog==6.9.0",
    "PyYAML==6.0.2",
    "uvloop==0.21.0",
    "wavelink==3.4.1",
    "yt-dlp[default]==2025.2.19",
    "lru-dict==1.3.0",
    "lxml==5.3.1",
    "asyncpraw @ git+https://github.com/praw-dev/asyncpraw",
    "discord-py[voice]==2.5.2",
    "audioop-lts==0.2.1",                                    # remove this when discord.py supports python 3.13
    "orjson>=3.10.15",
    "pynacl>=1.5.0",
]
name = "CritBot"
version = "0.2.0"
description = "A really cool Discord Bot"
authors = [{ name = "Lucas de Linhares", email = "lucasdelinhares@gmail.com" }]
requires-python = ">=3.13"
license = { text = "GPL-3.0" }
readme = "README.md"

# [build-system]
# requires = ["pdm-backend"]
# build-backend = "pdm.backend"

# [tool.pdm.dev-dependencies]
# dev = ["ruff>=0.0.275", "mypy>=1.4.1"]

# [tool.pdm.resolution.overrides]
# aiofiles = "23.2.1"

# [tool.pdm.scripts]
# lint = "ruff lint ."
# types = "mypy . --explicit-package-bases"
# all = { composite = ["lint", "types"] }
# start = "python3 launcher.py {args}"      # yes, I could use call but then I would have to rewrite the args part
# setup = "./setup.sh"
